slang-derive/tests/ui/fail/tuple_struct_not_supported.rs
use slang_derive::SlangAttribute;

#[derive(SlangAttribute)]
struct ShouldFail(f32, f32);

fn main() {}
