slang-derive/tests/ui/fail/tuple_struct_not_supported.stderr
error: SlangAttribute can only be derived for structs with named fields or enums with tuple variants
 --> tests/ui/fail/tuple_struct_not_supported.rs:4:8
  |
4 | struct ShouldFail(f32, f32);
  |        ^^^^^^^^^^
